--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -23,11 +23,11 @@ order += "disk /"
 order += "tztime local"
 
 tztime local {
-	format = " %Y-%m-%d %H:%M:%S "
+	format = "  %Y-%m-%d %H:%M:%S "
 }
 
 disk "/" {
-	format = " %avail "
+	format = "  %avail "
 }
 
 cpu_usage {
@@ -54,7 +54,7 @@ battery 0 {
 
 ethernet eth0 {
     # if you use %speed, i3status requires the cap_net_admin capability
-    format_up = " %ip"
+    format_up = "  %ip"
     color_good = "#FFFFFF"
     color_bad = "#FFFFFF"
     format_down = ""
